--- a/src/RichText/RichText.scss
+++ b/src/RichText/RichText.scss
@@ -19,23 +19,22 @@
     }
 
     h1 {
-        @include font-size-80;
-        font-weight: bold;
+        font-size: 2.5em;
     }
     h2 {
-        @include font-size-50;
+        font-size: 2em;
     }
 
     h3 {
-        @include font-size-50;
+        font-size: 1.8em;
     }
 
     h4 {
-        @include font-size-34;
+        font-size: 1.5em;
     }
 
     h5 {
-        @include font-size-18;
+        font-size: 1.2em;
     }
 
     h6 {
